--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "merkle-lite"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["Keith Noguchi <keith@noguchi.us>"]
 license = "MIT OR Apache-2.0"
@@ -11,3 +11,8 @@ categories = ["data-structures", "cryptography"]
 description = "Binary Merkle Tree, designed for Rust Crypto hash functions"
 
 [dependencies]
+digest = "0.10.6"
+
+[dev-dependencies]
+hex-literal = "0.3.4"
+sha3 = "0.10.6"
