--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run cargo test
         run: |
-          cargo test --workspace --all-targets --all-features --bins --examples
+          cargo test --all-features
 
   fmt:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run cargo fmt
         run: |
-          cargo fmt --check --all
+          cargo fmt --all --check
 
   clippy:
     runs-on: ubuntu-latest
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run cargo check
         run: |
-          cargo check --workspace --all-targets --all-features --bins --examples
+          cargo check --all-features --all-targets --bins --examples
 
   build:
     runs-on: ubuntu-latest
@@ -65,4 +65,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Run cargo build
         run: |
-          cargo build --workspace --all-targets --all-features --bins --examples
+          cargo build --all-features --all-targets --bins --examples
