--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "merkle-lite"
-version = "0.0.4"
+version = "0.0.5"
 edition = "2021"
 authors = ["Keith Noguchi <keith@noguchi.us>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/keithnoguchi/merkle-lite"
-keywords = ["crypto", "hash", "merkle", "merkle-tree"]
+keywords = ["crypto", "hash", "merkle", "merkle-tree", "no-std"]
 categories = ["data-structures", "cryptography", "no-std"]
 description = "Generic Binary Merkle Tree for Rust Crypto hash functions"
 
