--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "merkle-lite"
-version = "0.0.5"
+# When publishing a new version:
+# - Update CHANGELOG.md
+version = "0.0.6"
 edition = "2021"
+rust-version = "1.66"
 authors = ["Keith Noguchi <keith@noguchi.us>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
