--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "merkle-lite"
 # When publishing a new version:
 # - Update CHANGELOG.md
-version = "0.0.12"
+version = "0.0.13"
 edition = "2021"
 rust-version = "1.66"
 authors = ["Keith Noguchi <keith@noguchi.us>"]
@@ -18,6 +18,7 @@ digest = "0.10.6"
 
 [dev-dependencies]
 bencher = "0.1.5"
+fastrand = "1.8.0"
 hex-literal = "0.3.4"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 sha2 = "0.10.6"
