--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "merkle-lite"
 # When publishing a new version:
 # - Update CHANGELOG.md
-version = "0.0.14"
+version = "0.0.15"
 edition = "2021"
 rust-version = "1.61"
 authors = ["Keith Noguchi <keith@noguchi.us>"]
@@ -20,11 +20,14 @@ digest = "0.10.6"
 
 [dev-dependencies]
 bencher = "0.1.5"
+clap = { version = "4.1.1", features = ["derive"] }
 fastrand = "1.8.0"
 hex-literal = "0.3.4"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 sha2 = "0.10.6"
 sha3 = "0.10.6"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 
 [[bench]]
 name = "tree_from_iter"
